--- a/css/component/input.css
+++ b/css/component/input.css
@@ -1,102 +1,3 @@
-label {
+[data-label] {
 	cursor: pointer;
-	/* display: inline-block; */
-	/* &:has(input[type='radio']) {
-		border: 1px solid gray;
-	} */
-	/* > input:where([type='radio']) {
-		width: 100px;
-	} */
 }
-
-label {
-	/* cursor: pointer;
-	display: inline-block;
-	&:has(input[type='radio']) {
-		border: 1px solid gray;
-	} */
-	/* > input:where([type='radio']) {
-		width: 100px;
-	} */
-}
-
-/* input {
-	&:active {
-		border: 1px solid red;
-	}
-	&:focus {
-		border: 1px solid red;
-	}
-
-	~ label {
-		border: 1px solid green;
-	}
-} */
-/* 
-input[type='button'],
-input[type='checkbox'],
-input[type='color'],
-input[type='date'],
-input[type='datetime-local'],
-input[type='email'],
-input[type='file'],
-input[type='hidden'],
-input[type='image'],
-input[type='month'],
-input[type='number'],
-input[type='password'],
-input[type='radio'],
-input[type='range'],
-input[type='search'],
-input[type='submit'],
-input[type='tel'],
-input[type='text'],
-input[type='time'],
-input[type='url'],
-input[type='week'] {
-}
-
-input[type='button'] {
-}
-input[type='checkbox'] {
-}
-input[type='color'] {
-}
-input[type='date'] {
-}
-input[type='datetime-local'] {
-}
-input[type='email'] {
-}
-input[type='file'] {
-}
-input[type='hidden'] {
-}
-input[type='image'] {
-}
-input[type='month'] {
-}
-input[type='number'] {
-}
-input[type='password'] {
-}
-input[type='radio'] {
-}
-input[type='range'] {
-}
-input[type='search'] {
-}
-input[type='submit'] {
-}
-input[type='tel'] {
-}
-
-input[type='text'] {
-}
-
-input[type='time'] {
-}
-input[type='url'] {
-}
-input[type='week'] {
-} */
