--- a/css/_base.css
+++ b/css/_base.css
@@ -3,6 +3,8 @@
 @import url(element/button.css);
 @import url(element/h.css);
 @import url(element/input.css);
+@import url(element/select.css);
+@import url(element/textarea.css);
 
 @import url(component/input.css);
 
