--- a/css/element/input.css
+++ b/css/element/input.css
@@ -1,54 +1,105 @@
 input {
-	font: inherit;
-	margin: 0;
-	cursor: pointer;
-}
-input:where([type='search'], [type='checkbox'], [type='radio']) {
 	appearance: none;
+	border: 2px solid #4b4b4ba1;
+	border-radius: 0.25em;
 	box-sizing: inherit;
+	font: inherit;
 }
-
+input:where(
+		[type='date'],
+		[type='datetime-local'],
+		[type='email'],
+		[type='month'],
+		[type='number'],
+		[type='password'],
+		[type='search'],
+		[type='tel'],
+		[type='text'],
+		[type='time'],
+		[type='url'],
+		[type='week']
+	) {
+	color: #4b4b4b;
+	padding: 1px 6px;
+}
+input:where([type='button'], [type='reset'], [type='submit'], ) {
+	padding: 1px 6px;
+}
 input[type='color'] {
 	border: 0;
 	padding: 0;
 }
-input[type='radio'] {
-	--radio-dimensions: 1em;
-	--radio-border: calc(0.125 * var(--radio-dimensions));
 
-	width: var(--radio-dimensions);
-	height: var(--radio-dimensions);
-	border-radius: 50%;
-	border: var(--radio-border) solid gray;
+input[type='file'] {
+	appearance: none;
+}
+
+input:where([type='checkbox'], [type='radio']) {
+	--input-checked-dimensions: 1em;
+	--input-checked-border: calc(0.125 * var(--input-checked-dimensions));
+
+	cursor: pointer;
+	width: var(--input-checked-dimensions);
+	height: var(--input-checked-dimensions);
+	border: var(--input-checked-border) solid gray;
 	position: relative;
 	overflow: clip;
+	margin: 0;
+
+	&::before {
+		--input-checked-scale: 0;
+		--input-checked-offset: 50%;
+		--input-checked-offset-y: calc(
+			var(--input-checked-offset) - (var(--input-checked-scale) * var(--input-checked-border))
+		);
+
+		display: block;
+		position: absolute;
+		right: 50%;
+		bottom: 50%;
+		transform: translate(var(--input-checked-offset), var(--input-checked-offset-y))
+			scale(var(--input-checked-scale));
+		transform-origin: center;
+		transition: transform 0.3s;
+		color: #4b4b4ba1;
+	}
+
+	&:checked::before {
+		transform: translate(var(--input-checked-offset), var(--input-checked-offset-y))
+			scale(var(--input-checked-scale));
+	}
 }
 
-input[type='radio']::before {
-	--radio-checked-scale: 0;
-	--radio-checked-offset: 50%;
-	--radio-checked-offset-y: calc(
-		var(--radio-checked-offset) - (var(--radio-checked-scale) * var(--radio-border))
-	);
+input[type='radio'] {
+	border-radius: 50%;
 
-	display: block;
-	position: absolute;
-	right: 50%;
-	bottom: 50%;
-	transform: translate(var(--radio-checked-offset), var(--radio-checked-offset-y))
-		scale(var(--radio-checked-scale));
-
-	content: '⬤';
-	transform-origin: center;
-	transition: transform 0.3s;
-	color: #4b4b4ba1;
+	&:checked::before {
+		--input-checked-scale: 0.6;
+	}
+	&::before {
+		content: '⬤';
+	}
 }
 
-input[type='radio']:checked::before {
-	--radio-checked-scale: 0.6;
-	transform: translate(var(--radio-checked-offset), var(--radio-checked-offset-y))
-		scale(var(--radio-checked-scale));
+input[type='checkbox'] {
+	&:checked {
+		background-color: #4b4b4ba1;
+	}
+
+	&::before {
+		content: '✔';
+		font-weight: 100;
+		color: #ffffffff;
+		text-shadow: 1px 1px 8px #4b4b4ba1, 2px 2px 10px #f88600a1, 1px 1px 8px #48a0dfa1;
+	}
+	&:checked::before {
+		--input-checked-scale: 0.75;
+	}
 }
+
+/* text-shadow: 1px 1px 2px red, 0 0 0.5em blue, 0 0 0.2em blue; */
+/* filter: drop-shadow(0 0 0.375rem crimson); */
+/* box-shadow: inset 0 0 1px gold; */
 
 /* TODO:
 input[type='button'],
