--- a/css/element/select.css
+++ b/css/element/select.css
@@ -7,7 +7,9 @@ select {
 	box-sizing: inherit;
 	font: inherit;
 
-	padding: 1px 32px 1px 6px;
+	height: 1.5em;
+	padding: 0.0625em 24px 0.0625em 0.375em;
+	outline: 0;
 
 	background-image: url(data:image/svg+xml;base64,CjxzdmcgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2aWV3Qm94PSIwIDAgMjQgMjQiIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCI+CiAgPHBhdGggZmlsbD0iIzRiNGI0YiIgZD0iTTE2LjU5IDcuNDFMMTIgMTIuMTcgNy40MSA3LjQxIDYgMTBsNiA2IDYtNnoiLz4KPC9zdmc+Cg==);
 	background-repeat: no-repeat;
