--- a/css/element/select.css
+++ b/css/element/select.css
@@ -1,17 +1,20 @@
 select {
 	appearance: none;
-	border: 2px solid #4b4b4ba1;
-	color: 2px solid #4b4b4ba1;
-	background-color: buttonface;
-	border-radius: 0.25em;
+	background-color: var(--button-background-color);
+	border: var(--input-border);
+	border-radius: var(--input-border-radius);
 	box-sizing: inherit;
 	font: inherit;
 
-	height: 1.5em;
-	padding: 0.0625em 24px 0.0625em 0.375em;
+	height: 24px;
+	padding: var(--button-padding-y) 24px var(--button-padding-y) var(--button-padding-x);
 	outline: 0;
 
 	background-image: url(data:image/svg+xml;base64,CjxzdmcgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2aWV3Qm94PSIwIDAgMjQgMjQiIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCI+CiAgPHBhdGggZmlsbD0iIzRiNGI0YiIgZD0iTTE2LjU5IDcuNDFMMTIgMTIuMTcgNy40MSA3LjQxIDYgMTBsNiA2IDYtNnoiLz4KPC9zdmc+Cg==);
 	background-repeat: no-repeat;
-	background-position: right 0.125em center;
+	background-position: right 2px center;
+
+	&:hover {
+		background-color: buttonhoverface;
+	}
 }
