--- a/css/element/h.css
+++ b/css/element/h.css
@@ -1,29 +1,29 @@
 h1 {
-	font-size: 2em;
+	font-size: 32px;
 	margin: 0;
 }
 
 h2 {
-	font-size: 1.8em;
+	font-size: 28px;
 	margin: 0;
 }
 
 h3 {
-	font-size: 1.6em;
+	font-size: 24px;
 	margin: 0;
 }
 
 h4 {
-	font-size: 1.4em;
+	font-size: 20px;
 	margin: 0;
 }
 
 h5 {
-	font-size: 1.2em;
+	font-size: 18px;
 	margin: 0;
 }
 
 h6 {
-	font-size: 1em;
+	font-size: 16px;
 	margin: 0;
 }
