--- a/css/element/input.css
+++ b/css/element/input.css
@@ -1,10 +1,25 @@
 input {
 	appearance: none;
-	border: 2px solid #4b4b4ba1;
-	border-radius: 0.25em;
 	box-sizing: inherit;
 	font: inherit;
+
+	&::-webkit-datetime-edit,
+	&::-webkit-datetime-edit-fields-wrapper,
+	&::-webkit-datetime-edit-text,
+	&::-webkit-datetime-edit-ampm-field,
+	&::-webkit-datetime-edit-day-field,
+	&::-webkit-datetime-edit-hour-field,
+	&::-webkit-datetime-edit-millisecond-field,
+	&::-webkit-datetime-edit-minute-field,
+	&::-webkit-datetime-edit-month-field,
+	&::-webkit-datetime-edit-second-field,
+	&::-webkit-datetime-edit-week-field,
+	&::-webkit-datetime-edit-year-field,
+	&::-webkit-calendar-picker-indicator {
+		color: #4b4b4ba1;
+	}
 }
+
 input:where(
 		[type='date'],
 		[type='datetime-local'],
@@ -19,27 +34,64 @@ input:where(
 		[type='url'],
 		[type='week']
 	) {
-	color: #4b4b4b;
-	height: 1.75em;
-	padding: 0.0625em 0.375em;
+	border: var(--input-border);
+	border-radius: var(--input-border-radius);
+	color: var(--text-input-color);
+	height: 28px;
+	padding: var(--text-input-padding-y) var(--text-input-padding-x);
 }
-input:where([type='button'], [type='reset'], [type='submit'], ) {
-	height: 1.5em;
-	padding: 0.0625em 0.375em;
+input:where([type='button'], [type='reset'], [type='submit']) {
+	background-color: var(--button-background-color);
+	border: var(--input-border);
+	border-radius: var(--input-border-radius);
+	height: 24px;
+	padding: var(--button-padding-y) var(--button-padding-x);
 }
 input[type='color'] {
-	border: 0;
-	padding: 0;
+	background-color: var(--button-background-color);
+	border: var(--input-border);
+	border-radius: var(--input-border-radius);
+	height: 12px;
+	min-width: 64px;
+	padding: 8px;
+	vertical-align: 0px;
+
+	&::-webkit-color-swatch-wrapper {
+		padding: 0;
+		margin: 0;
+		width: 100%;
+		height: 100%;
+	}
 }
 
 input[type='file'] {
+	font: inherit;
+
+	&::file-selector-button {
+		background-color: var(--button-background-color);
+		border: var(--input-border);
+		border-radius: var(--input-border-radius);
+		font: inherit;
+		height: 32px;
+	}
+}
+
+input[type='image'] {
+	vertical-align: bottom;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+	height: auto;
+}
+
+[type='search']::-webkit-search-decoration {
 	appearance: none;
 }
 
 input:where([type='checkbox'], [type='radio']) {
-	--input-checked-dimensions: 1em;
+	--input-checked-dimensions: 16px;
 	--input-checked-border: calc(0.125 * var(--input-checked-dimensions));
-
 	cursor: pointer;
 	width: var(--input-checked-dimensions);
 	height: var(--input-checked-dimensions);
@@ -84,6 +136,8 @@ input[type='radio'] {
 }
 
 input[type='checkbox'] {
+	border-radius: var(--input-border-radius);
+
 	&:checked {
 		background-color: #4b4b4ba1;
 	}
@@ -98,31 +152,3 @@ input[type='checkbox'] {
 		--input-checked-scale: 0.75;
 	}
 }
-
-/* text-shadow: 1px 1px 2px red, 0 0 0.5em blue, 0 0 0.2em blue; */
-/* filter: drop-shadow(0 0 0.375rem crimson); */
-/* box-shadow: inset 0 0 1px gold; */
-
-/* TODO:
-input[type='button'],
-input[type='checkbox'],
-input[type='color'],
-input[type='date'],
-input[type='datetime-local'],
-input[type='email'],
-input[type='file'],
-input[type='hidden'],
-input[type='image'],
-input[type='month'],
-input[type='number'],
-input[type='password'],
-input[type='radio'],
-input[type='range'],
-input[type='search'],
-input[type='submit'],
-input[type='tel'],
-input[type='text'],
-input[type='time'],
-input[type='url'],
-input[type='week'],
-*/
