--- a/css/element/input.css
+++ b/css/element/input.css
@@ -152,3 +152,90 @@ input[type='checkbox'] {
 		--input-checked-scale: 0.75;
 	}
 }
+
+/* 
+
+input[type='range'] needs seperate delarations for webkit and moz vendor prefixes
+grouping prefix CSS selectors together, breaks styling in ALL browsers. See Quirksmode URL below for more info.
+
+https://www.quirksmode.org/blog/archives/2015/11/styling_and_scr.html
+
+- "Annoyingly, you cannot combine these selectors in one rule,
+  even though you usually want to give all browsers the same styles (except for margins on the thumb).
+  If a browser finds one selector it doesn’t understand it ignores all of them.
+  So you’ll have to repeat yourself or use a server-side CSS generator."
+
+*/
+
+input[type='range'] {
+	--range_input--cursor: pointer;
+
+	--range_input_thumb--appearance: none;
+	--range_input_thumb--border: none;
+	--range_input_thumb--box-sizing: inherit;
+	--range_input_thumb--height: 16px;
+	--range_input_thumb--width: 16px;
+	--range_input_thumb--border-radius: 50%;
+
+	--range_input_track--width: 100%;
+	--range_input_track--height-offset-y: 1px;
+	--range_input_track--height: calc(
+		(var(--range_input_thumb--height) / 4) + var(--range_input_track--height-offset-y)
+	);
+	--range_input_track--background: #ddd;
+	--range_input_track--border-radius: 3px;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+	width: var(--range_input_track--width);
+	height: var(--range_input_track--height);
+	background: var(--range_input_track--background);
+	border-radius: var(--range_input_track--border-radius);
+	cursor: var(--range_input--cursor);
+}
+
+input[type='range']::-moz-range-track {
+	width: var(--range_input_track--width);
+	height: var(--range_input_track--height);
+	background: var(--range_input_track--background);
+	border-radius: var(--range_input_track--border-radius);
+	cursor: var(--range_input--cursor);
+}
+
+input[type='range']::-webkit-slider-thumb {
+	appearance: var(--range_input_thumb--appearance);
+	border: var(--range_input_thumb--border);
+	box-sizing: var(--range_input_thumb--box-sizing);
+	height: var(--range_input_thumb--height);
+	width: var(--range_input_thumb--width);
+	border: var(--input-border);
+	border-radius: var(--range_input_thumb--border-radius);
+	background-color: var(--button-background-color);
+	cursor: var(--range_input--cursor);
+
+	/* Webkit specific */
+	position: relative;
+	bottom: calc(
+		(var(--range_input_thumb--height) / 2) - (var(--range_input_track--height-offset-y) / 2)
+	);
+}
+
+input[type='range']::-webkit-slider-thumb:hover {
+	background-color: var(--text-input-color);
+}
+
+input[type='range']::-moz-range-thumb {
+	appearance: var(--range_input_thumb--appearance);
+	border: var(--range_input_thumb--border);
+	box-sizing: var(--range_input_thumb--box-sizing);
+	height: var(--range_input_thumb--height);
+	width: var(--range_input_thumb--width);
+	border: var(--input-border);
+	border-radius: var(--range_input_thumb--border-radius);
+	background-color: var(--button-background-color);
+	cursor: var(--range_input--cursor);
+}
+
+input[type='range']::-moz-range-thumb:hover {
+	background-color: var(--text-input-color);
+}
