--- a/css/_base.css
+++ b/css/_base.css
@@ -5,6 +5,7 @@
 @import url(element/button.css);
 @import url(element/h.css);
 @import url(element/input.css);
+@import url(element/input/range.css);
 @import url(element/select.css);
 @import url(element/textarea.css);
 
