--- a/css/element/input/input.css
+++ b/css/element/input/input.css
@@ -1,4 +1,7 @@
-html {
+input,
+button,
+select,
+textarea {
 	--input-border-color: #4b4b4ba1;
 	--input-border-radius: 4px;
 	--input-border-style: solid;
@@ -14,9 +17,7 @@ html {
 	--text-input-color: #4b4b4b;
 	--text-input-padding-x: var(--input-padding-x);
 	--text-input-padding-y: var(--input-padding-y);
-}
 
-input {
 	appearance: none;
 	box-sizing: inherit;
 	font: inherit;
