--- a/css/element/input/mod.css
+++ b/css/element/input/mod.css
@@ -1,4 +1,7 @@
+/* import base input file */
 @import url(input.css);
+
+/* import input variations */
 @import url(button.css);
 @import url(checked.css);
 @import url(text.css);
