--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,8 @@
 @import url(development/lint.css);
-@import url(element/html.css);
-@import url(element/body.css);
-@import url(element/h.css);
-@import url(element/input/mod.css);
-
-@import url(component/input.css);
+@import url(html.css);
+@import url(body.css);
+@import url(h.css);
+@import url(input/mod.css);
 
 [data-layout-content] {
 	padding: 10px 25px;
