--- a/css/input/input.css
+++ b/css/input/input.css
@@ -2,21 +2,21 @@ input,
 button,
 select,
 textarea {
-	--input-border-color: #4b4b4ba1;
-	--input-border-radius: 4px;
-	--input-border-style: solid;
-	--input-border-width: 2px;
-	--input-border: var(--input-border-width) var(--input-border-style) var(--input-border-color);
-	--input-padding-x: 6px;
-	--input-padding-y: 1px;
+	--input--border-color: #4b4b4ba1;
+	--input--border-radius: 4px;
+	--input--border-style: solid;
+	--input--border-width: 2px;
+	--input--border: var(--input--border-width) var(--input--border-style) var(--input--border-color);
+	--input--padding-x: 6px;
+	--input--padding-y: 1px;
 
-	--button-background-color: #efefef;
-	--button-padding-x: var(--input-padding-x);
-	--button-padding-y: 2px;
+	--button--background-color: #efefef;
+	--button--padding-x: var(--input--padding-x);
+	--button--padding-y: 2px;
 
-	--text-input-color: #4b4b4b;
-	--text-input-padding-x: var(--input-padding-x);
-	--text-input-padding-y: var(--input-padding-y);
+	--text_input--color: #4b4b4b;
+	--text_input--padding-x: var(--input--padding-x);
+	--text_input--padding-y: var(--input--padding-y);
 
 	appearance: none;
 	box-sizing: inherit;
