--- a/css/input/button.css
+++ b/css/input/button.css
@@ -1,11 +1,11 @@
 button,
 select,
 input:where([type='button'], [type='reset'], [type='submit']) {
-	background-color: var(--button-background-color);
-	border: var(--input-border);
-	border-radius: var(--input-border-radius);
+	background-color: var(--button--background-color);
+	border: var(--input--border);
+	border-radius: var(--input--border-radius);
 	height: 24px;
-	padding: var(--button-padding-y) var(--button-padding-x);
+	padding: var(--button--padding-y) var(--button--padding-x);
 }
 
 select {
@@ -14,7 +14,7 @@ select {
 	background-repeat: no-repeat;
 	background-position: right 2px center;
 
-	padding: var(--button-padding-y) 24px var(--button-padding-y) var(--button-padding-x);
+	padding: var(--button--padding-y) 24px var(--button--padding-y) var(--button--padding-x);
 
 	&:hover {
 		background-color: buttonhoverface;
@@ -22,9 +22,9 @@ select {
 }
 
 input[type='color'] {
-	background-color: var(--button-background-color);
-	border: var(--input-border);
-	border-radius: var(--input-border-radius);
+	background-color: var(--button--background-color);
+	border: var(--input--border);
+	border-radius: var(--input--border-radius);
 	height: 12px;
 	min-width: 64px;
 	padding: 8px;
@@ -42,9 +42,9 @@ input[type='file'] {
 	font: inherit;
 
 	&::file-selector-button {
-		background-color: var(--button-background-color);
-		border: var(--input-border);
-		border-radius: var(--input-border-radius);
+		background-color: var(--button--background-color);
+		border: var(--input--border);
+		border-radius: var(--input--border-radius);
 		font: inherit;
 		height: 32px;
 	}
