--- a/css/html.css
+++ b/css/html.css
@@ -3,11 +3,17 @@ html {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-synthesis: none;
 
-	line-height: 1.2;
+	line-height: 1.5;
 
 	text-rendering: optimizeLegibility;
 	text-size-adjust: 100%;
 
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+	html {
+		scroll-behavior: smooth;
+	}
 }
