--- a/css/input/button.css
+++ b/css/input/button.css
@@ -1,10 +1,12 @@
 button,
 select,
-input:where([type='button'], [type='reset'], [type='submit']) {
+input::file-selector-button,
+input:where([type='button'], input[type='color'], [type='reset'], [type='submit']) {
 	background-color: var(--button--background_color);
 	border: var(--input--border);
 	border-radius: var(--input--border_radius);
-	height: 24px;
+	cursor: pointer;
+	height: var(--button--height);
 	padding: var(--button--padding_y) var(--button--padding_x);
 }
 
@@ -17,18 +19,14 @@ select {
 	padding: var(--button--padding_y) 24px var(--button--padding_y) var(--button--padding_x);
 
 	&:hover {
-		background-color: buttonhoverface;
+		background-color: #4b4b4ba1;
 	}
 }
 
 input[type='color'] {
-	background-color: var(--button--background_color);
-	border: var(--input--border);
-	border-radius: var(--input--border_radius);
-	height: 12px;
 	min-width: 64px;
-	padding: 8px;
-	vertical-align: 0px;
+	padding: 6px;
+	vertical-align: bottom;
 
 	&::-webkit-color-swatch-wrapper {
 		padding: 0;
@@ -42,10 +40,6 @@ input[type='file'] {
 	font: inherit;
 
 	&::file-selector-button {
-		background-color: var(--button--background_color);
-		border: var(--input--border);
-		border-radius: var(--input--border_radius);
 		font: inherit;
-		height: 32px;
 	}
 }
